# cactus

./: .gitignore  README.md  pyproject.toml  schema.md
.claude/: settings.local.json
cactus/: cli.py  llm.py  sources.py  wiki.py
cactus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cactus/ops/: ingest.py  lint.py  query.py
sources/: claude-code-session-management.md  dark-code-agent-security.md  enterprise-agents-discussion.md  memento-paper.md  meta-harness-paper.md  ml-avoiding-test-set-overfitting.md  ml-llm-production-discussion.md  ml-system-design-monitoring.md  openai-agents-python.md  pi-autoresearch.md  rtk-rust-token-killer.md
wiki/: index.md  log.md
