[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus"
version = "0.1.0"
description = "A personal LLM-powered knowledge base"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
cactus = "cactus.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cactus*"]
